<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:padding="4dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_item_avt"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_address"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_item_name"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.2"
            android:src="@drawable/iv_avt_rc"/>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_item_avt"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:text="@string/tv_name"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            android:text="@string/tv_id"/>

        <TextView
            android:id="@+id/tv_item_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toRightOf="@id/iv_item_avt"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:text="@string/tv_address"/>

        <TextView
            android:id="@+id/tv_item_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            android:text="@string/tv_age"/>

        <ImageView
            android:id="@+id/iv_item_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_item_age"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_item_id"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintVertical_bias="0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
